# Raspi-TelemHost-Firmware-FE12

./: .gitignore  CMakeLists.txt  FE12.dbc  README.md  dashboard.sh  requirements.txt  startup.sh  webserver.sh
DAQ/: FE12.dbc  config.json
DAQ/Drivers/ADS1263/: CMakeLists.txt  Readme_EN.txt
DAQ/Drivers/ADS1263/Config/: DEV_Config.c  DEV_Config.h  bcm2835.c  bcm2835.h
DAQ/Inc/: config.h  telemetry.h
DAQ/Src/: config.cpp  main.cpp  telemetry.cpp
Dashboard/: .gitignore  CMakeLists.txt  README.md  config.py  daq.py  deps.cmake  main.py  startup.sh  telemetry.py  ui.py
Dashboard/Assets/: 20230606Gen5CANDB.dbc  FE12.dbc
Dashboard/Source/: CMakeLists.txt  debug_panel.cpp  debug_panel.h  display.cpp  display.h  gauge_panel.cpp  gauge_panel.h  main.cpp  main_panel.cpp  main_panel.h  main_window.cpp  main_window.h  palette.h  telem.cpp  telem.h  utils.cpp  utils.h
Dashboard/logs/: 20250807_055734.csv  20250808_011159.csv  20250808_011905.csv
Scripts/: dashboard.sh  webserver.sh
Test/: canbus.py  replay.py
Testing/: canbus.py
WebGUI/: datagrapher.py  main.py
WebServer/: datagrapher.py  main.py
WebService/Backend/: main.py  telemetry.py
cmake/: deps.cmake
logs/: 20250509_103953.csv  FE12_Log.csv
scripts/: log_FE12_CAN.sh
src/: .goutputstream-KYUT72  20230606 Gen5 CAN DB.dbc  20240129 Gen5 CAN DB.dbc  ADS1263.py  FE12.dbc  canManager.py  config.py  dashboard.py  main.py  telem.py  telemetry.py  testads.py
test/: bus.py  canbus.py  knobs.py  state.py  test_dash.py
